# idis

./: .$structure.drawio.bkp  Cargo.toml  README.md  buf.txt  structure.drawio
document/: hazard-map.md  kv-db.md  low-L.md
src/: lib.rs  main.rs
src/cache/: doc.md
src/cash/: doc.md  mod.rs
src/config/: mod.rs
src/db/: mod.rs  mongo_client.rs  query.rs
src/db/engine/: mod.rs
src/db/engine/chain_virtual_document_drive/: disk.rs  drive.rs  drive_struct.rs  mod.rs
src/idvd/: README.md  allocator.rs  cache.rs  cash.rs  error.rs  idvd.rs  mod.rs
src/ton/: README.md
src/ton/serde/: de.rs  error.rs  mod.rs  ser.rs
src/ton/serde/value/: map.rs
src/utils/: custom_serializers_adapters.rs  err_set.rs  mod.rs  target.rs
src/utils/ruid/: mod.rs  prefix.rs
tests/: ruid.rs
