[package]
name = "idis"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.218", features = ["derive"] }
uuid = "1.16.0"
half = { version = "2.5.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
libc = "0.2.171"
rand = "0.9.0"