[package]
name = "idis"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full"] }
libc = "0.2.171"
linked-hash-map = "0.5.6"
lru = "0.13.0"
winapi = { version = "0.3.9", features = ["winbase"] }
rand = "0.9.1"
rand_chacha = "0.9.0"